fix(common-library): harden heic to jpg conversion when using imagemagick